Create Main.java